Fixed fb social embeds
border-bottom was cut off

--- a/app/assets/stylesheets/_general/_general.sass
+++ b/app/assets/stylesheets/_general/_general.sass
@@ -423,10 +423,18 @@
     height: 825px
     //margin-top: -230px
 
-// Twitter Tweets
+// Social Embeds
 .twitter-tweet, .fb-post, .instagram-media
     margin: 0 25px 50px 25px !important
     max-width: 500px !important
 
     @media (max-width: 570px)
         width: 100% !important
+
+.fb-post
+
+    @media (max-width: 545px)
+        min-height: 335px
+
+    @media (max-width: 320px)
+        min-height: 380px
